Fixed issue with scrollbar in header and added proper links to sigup and login buttons

--- a/css/home.css
+++ b/css/home.css
@@ -9,7 +9,6 @@ body {
     background: #424242;
     overflow: auto;
     width: 1200px;
-    height: 70px;
     margin: auto;
     padding: 10px 10px 10px 10px;
 }
